Add JwtAuthFilter for token validation