@@ -1,30 +1,25 @@
 package com.JWT_SpringBoot_Authenctication.model;
 
 import java.util.Collection;
+import java.util.List;
 
-import org.jspecify.annotations.Nullable;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import io.jsonwebtoken.lang.Collections;
+import com.JWT_SpringBoot_Authenctication.enums.Role;
+
 import jakarta.persistence.Entity;
+import jakarta.persistence.EnumType;
+import jakarta.persistence.Enumerated;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
 import jakarta.persistence.JoinColumn;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.Setter;
 
 @Entity
-@Getter
-@Setter
-@AllArgsConstructor
-@NoArgsConstructor
 public class Users implements UserDetails{
 
-	private static final long serialVersionUID = 1L;
 
 	@Id
 	@GeneratedValue(strategy = GenerationType.IDENTITY)
@@ -34,14 +29,19 @@ public class Users implements UserDetails{
 	private String username;
 	private String password;
 	
-	public Users(String username, String password) {
+	@Enumerated(EnumType.STRING)
+	private Role role;
+	
+	
+	
+	public Users(String username, String password, Role role) {
 		this.username = username;
 		this.password = password;
+		this.role = role;
 	}
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		// TODO Auto-generated method stub
-		 return Collections.emptyList();  
+		return List.of(new SimpleGrantedAuthority("ROLE_" + role.name()));
 	}
 	@Override
 	public  String getPassword() {
@@ -53,17 +53,45 @@ public class Users implements UserDetails{
 		// TODO Auto-generated method stub
 		return username;
 	}
+	@Override
+	public boolean isAccountNonExpired() {
+	    return true; // Simple rakhne ke liye true return karein
+	}
+
+	@Override
+	public boolean isAccountNonLocked() {
+	    return true;
+	}
+
+	@Override
+	public boolean isCredentialsNonExpired() {
+	    return true;
+	}
+
+	@Override
+	public boolean isEnabled() {
+	    return true;
+	}
+	
+	
 	public Long getId() {
 		return id;
 	}
 	public void setId(Long id) {
 		this.id = id;
 	}
+	public Role getRole() {
+		return role;
+	}
+	public void setRole(Role role) {
+		this.role = role;
+	}
 	public Users() {
 		super();
 	}
 
-	
 
 	
+
 }
+
